--- a/.github/workflows/gradle-build-test.yml
+++ b/.github/workflows/gradle-build-test.yml
@@ -33,6 +33,7 @@ jobs:
             build
             Dockerfile
             docker-compose.yml
+            .dockerignore
 
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v3
