--- a/.github/workflows/docker-to-jfrog.yml
+++ b/.github/workflows/docker-to-jfrog.yml
@@ -12,7 +12,7 @@ on:
         required: true 
         type: string
 jobs:
-  remove-artifact:
+  docker-build-and-publish:
     runs-on: ubuntu-latest
 i    steps:
       - name: Download Build Output
