--- a/.github/workflows/push-to-ecr.yml
+++ b/.github/workflows/push-to-ecr.yml
@@ -7,20 +7,14 @@ on:
         required: false 
         default: "build-files"
         type: string
-      AWS_REGION:
+      aws-region:
         required: true
         type: string
-      ECR_REGISTRY:
-        required: true
-        type: string
-      ECR_REPOSITORY:
-        required: true
-        type: string
-      IMAGE_TAG:
+      ecr-repository:
         required: true
         type: string
     outputs:
-      image-name: ${{ steps.build-image.outputs.image }}
+      image-name: ${{ jobs.push-to-ecr.outputs.image }}
 
 jobs:
 
@@ -42,7 +36,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ inputs.AWS_REGION }}
+          aws-region: ${{ inputs.aws-region }}
 
       - name: Login to Amazon ECR
         id: login-ecr
@@ -54,10 +48,10 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ github.run_number }}
         run: |
-          imageName=${{inputs.ECR_REGISTRY}}/${{inputs.ECR_REPOSITORY}}:${{inputs.IMAGE_TAG}}
+          imageName=$ECR_REGISTRY}}/${{inputs.ecr-repository}}:$IMAGE_TAG
           echo "Build and push $imageName"
-          docker build -t ${{inputs.ECR_REGISTRY}}/${{inputs.ECR_REPOSITORY}}:${{inputs.IMAGE_TAG}} .
-          docker push ${{inputs.ECR_REGISTRY}}/${{inputs.ECR_REPOSITORY}}:${{inputs.IMAGE_TAG}}
+          docker build -t $ECR_REGISTRY/${{inputs.ecr-repostory:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/${{inputs.ecr-repository}}:$IMAGE_TAG
           echo "image=$imageName" >> $GITHUB_OUTPUT
 
 
