--- a/.github/workflows/push-to-ecr.yml
+++ b/.github/workflows/push-to-ecr.yml
@@ -24,7 +24,7 @@ jobs:
     environment: development
     outputs:
       image: ${{ steps.build-image.outputs.image }}
-
+    if: github.ref == 'refs/heads/main'
     steps:
       - name: Download Build Output
         uses: actions/download-artifact@v3
