--- a/.github/workflows/push-to-ecr.yml
+++ b/.github/workflows/push-to-ecr.yml
@@ -50,6 +50,9 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ github.run_number }}
         run: |
+          echo "ECR REG: $ECR_REGISTRY"
+          echo "ECR REPO: ${{inputs.ecr-repository}}"
+          echo "IMAGE: $IMAGE_TAG"
           imageName=$ECR_REGISTRY}}/${{inputs.ecr-repository}}:$IMAGE_TAG
           echo "Build and push $imageName"
           docker build -t $ECR_REGISTRY/${{inputs.ecr-repostory:$IMAGE_TAG .
