--- a/.github/workflows/push-to-ecr.yml
+++ b/.github/workflows/push-to-ecr.yml
@@ -48,15 +48,16 @@ jobs:
         id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: ${{inputs.ecr-repository}}
           IMAGE_TAG: ${{ github.run_number }}
         run: |
           echo "ECR REG: $ECR_REGISTRY"
-          echo "ECR REPO: ${{inputs.ecr-repository}}"
+          echo "ECR REPO: $ECR_REPOSITORY"
           echo "IMAGE: $IMAGE_TAG"
-          imageName=$ECR_REGISTRY}}/${{inputs.ecr-repository}}:$IMAGE_TAG
+          imageName=$ECR_REGISTRY}}/$ECR_REPOSITORY:$IMAGE_TAG
           echo "Build and push $imageName"
-          docker build -t $ECR_REGISTRY/${{inputs.ecr-repostory:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/${{inputs.ecr-repository}}:$IMAGE_TAG
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "image=$imageName" >> $GITHUB_OUTPUT
 
 
