AE-95 Add .aws file to build upload

--- a/.github/workflows/gradle-build-test.yml
+++ b/.github/workflows/gradle-build-test.yml
@@ -33,6 +33,7 @@ jobs:
           name: build-files
           path: |
             build
+            .aws
             Dockerfile
             docker-compose.yml
             .dockerignore
