--- a/.github/workflows/gradle-build-test.yml
+++ b/.github/workflows/gradle-build-test.yml
@@ -7,6 +7,8 @@ on:
         required: false 
         default: 70
         type: number
+      ecs-task-definition:
+        required: true
 jobs:
   gradle-build-test:
     name: Gradle Build and Test 
@@ -36,6 +38,7 @@ jobs:
             Dockerfile
             docker-compose.yml
             .dockerignore
+            ${{inputs.ecs-task-definition}}
 
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v3
