AE-99 Disable main for a while

--- a/.github/workflows/gradle-build-test.yml
+++ b/.github/workflows/gradle-build-test.yml
@@ -9,6 +9,7 @@ on:
         type: number
       ecs-task-definition:
         required: true
+        type: string
 jobs:
   gradle-build-test:
     name: Gradle Build and Test 
