--- a/.github/workflows/deploy_ecs.yml
+++ b/.github/workflows/deploy_ecs.yml
@@ -3,6 +3,10 @@ name: 'Push to ECR'
 on:
   workflow_call:
     inputs:
+      build-files:
+        required: false
+        default: "build-files"
+        type: string
       aws-region:
         required: true
         type: string
