--- a/.github/workflows/deploy_ecs.yml
+++ b/.github/workflows/deploy_ecs.yml
@@ -31,6 +31,11 @@ jobs:
     if: ${{ (github.ref == 'refs/heads/main') || (github.event_name == 'workflow_dispatch') }}
     runs-on: ubuntu-latest
     steps:
+      - name: Download Build Output
+        uses: actions/download-artifact@v3
+        with:
+          name: ${{ inputs.build-files}}
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
