--- a/.github/workflows/gradle-build-test.yml
+++ b/.github/workflows/gradle-build-test.yml
@@ -29,6 +29,7 @@ jobs:
 
       - name: Upload Build Output
         uses: actions/upload-artifact@v3
+
         with:
           name: build-files
           path: |
@@ -36,7 +37,7 @@ jobs:
             Dockerfile
             docker-compose.yml
             .dockerignore
-            .aws
+            .aws/*
 
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v3
