--- a/.github/workflows/gradle-build-test.yml
+++ b/.github/workflows/gradle-build-test.yml
@@ -37,7 +37,7 @@ jobs:
             Dockerfile
             docker-compose.yml
             .dockerignore
-            .aws/*
+            .aws/
 
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v3
