--- a/.github/workflows/deploy_ecs.yml
+++ b/.github/workflows/deploy_ecs.yml
@@ -47,28 +47,16 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Print downloaded artifact
-        run: ls -R
-
       - name: Fill in the new image ID in the Amazon ECS task definition
         id: task-def
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          IMAGE_TAG: ${{ github.run_number }}
-          ECS_TASK_DEFINITION: ${{ inputs.ecs-task-definition }}
-          CONTAINER_NAME: ${{ inputs.container-name }}
-          ECR_REPOSITORY: ${{ inputs.ecr-repository }}
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          task-definition: .aws/ecs-task.json
+          task-definition: ${{ inputs.ecs-task-definition }}
           container-name: ${{ inputs.container-name }}
           image: ${{ steps.login-ecr.outputs.registry }}/${{ inputs.ecr-repository }}:${{ github.run_number }}
 
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
-        env:
-          ECS_SERVICE: ${{ inputs.ecs-service }}
-          ECS_CLUSTER: ${{ inputs.ecs-cluster }}
         with:
           task-definition: ${{ steps.task-def.outputs.task-definition }}
           service: ${{ inputs.ecs-service }}
