--- a/.github/workflows/deploy_ecs.yml
+++ b/.github/workflows/deploy_ecs.yml
@@ -3,9 +3,9 @@ name: 'Push to ECR'
 on:
   workflow_call:
     inputs:
-      build-files:
+      deploy-files:
         required: false
-        default: "build-files"
+        default: "deploy-files"
         type: string
       aws-region:
         required: true
@@ -25,6 +25,9 @@ on:
       ecs-cluster:
         required: true
         type: string
+      image-tag:
+        required: true
+        type: string
 
 jobs:
   deploy_ecs:
@@ -34,7 +37,7 @@ jobs:
       - name: Download Build Output
         uses: actions/download-artifact@v3
         with:
-          name: ${{ inputs.build-files}}
+          name: ${{ inputs.deploy-files}}
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -53,7 +56,7 @@ jobs:
         with:
           task-definition: ${{ inputs.ecs-task-definition }}
           container-name: ${{ inputs.container-name }}
-          image: ${{ steps.login-ecr.outputs.registry }}/${{ inputs.ecr-repository }}:${{ github.run_number }}
+          image: ${{ steps.login-ecr.outputs.registry }}/${{ inputs.ecr-repository }}:${{ inputs.image-tag }}
 
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
