--- a/.github/workflows/deploy_ecs.yml
+++ b/.github/workflows/deploy_ecs.yml
@@ -31,7 +31,7 @@ on:
 
 jobs:
   deploy_ecs:
-    if: ${{ (github.ref == 'refs/heads/main') || (github.event_name == 'workflow_dispatch') }}
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
       - name: Download Build Output
