AE-99 Disable main for a while

--- a/.github/workflows/deploy_ecs.yml
+++ b/.github/workflows/deploy_ecs.yml
@@ -39,6 +39,9 @@ jobs:
         with:
           name: ${{ inputs.deploy-files}}
 
+      - name: Display deploy files
+        run: ls -R
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
