--- a/.github/workflows/gradle-build-test.yml
+++ b/.github/workflows/gradle-build-test.yml
@@ -7,26 +7,24 @@ on:
         required: false 
         default: 70
         type: number
-      ENVIRONMENT:
-        required: true
-        type: string
-    secrets:
-      JFROG_MAVEN_URL:
-        required: true
-      JFROG_PASSWORD:
-        required: true
-      JFROG_USERNAME:
-        required: true
+      jfrog-maven-url:
+        required: false
+      jfrog-password:
+        required: false
+      jfrog-username:
+        required: false
+
+env:
+  JFROG_MAVEN_URL: ${{ inputs.jfrog-maven-url }}
+  JFROG_PASSWORD: ${{ inputs.jfrog-password }}
+  JFROG_USERNAME: ${{ inputs.jfrog-username }}
 
 jobs:
   gradle-build-test:
     name: Gradle Build and Test 
     runs-on: ubuntu-latest
     permissions: write-all
-    env:
-      JFROG_MAVEN_URL: ${{ secrets.JFROG_MAVEN_URL }}
-      JFROG_PASSWORD: ${{ secrets.JFROG_PASSWORD }}
-      JFROG_USERNAME: ${{ secrets.JFROG_USERNAME }}
+    secrets: inherit
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
