--- a/.github/workflows/gradle-build-test.yml
+++ b/.github/workflows/gradle-build-test.yml
@@ -12,6 +12,7 @@ jobs:
     name: Gradle Build and Test 
     runs-on: ubuntu-latest
     permissions: write-all
+    timeout-minutes: 15
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
