--- a/.github/workflows/plan.yaml
+++ b/.github/workflows/plan.yaml
@@ -13,6 +13,7 @@ jobs:
   test-terraform:
     name: "test-terraform"
     runs-on: ubuntu-latest
+    timeout-minutes: 2
     permissions:
       id-token: write
       contents: read
