build: Prolong timeout as defaults

--- a/.github/workflows/util-pr-checks.yml
+++ b/.github/workflows/util-pr-checks.yml
@@ -5,6 +5,7 @@ jobs:
   pr-check:
     name: "Running PR Checks"
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     permissions:
       checks: write
       contents: read
