--- a/.github/workflows/apply.yaml
+++ b/.github/workflows/apply.yaml
@@ -10,6 +10,7 @@ jobs:
   test-terraform:
     name: "test-terraform-apply"
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     permissions:
       id-token: write
       contents: read
