--- a/.github/workflows/gradle-build-test.yml
+++ b/.github/workflows/gradle-build-test.yml
@@ -7,11 +7,16 @@ on:
         required: false 
         default: 70
         type: number
+      timeout-minutes:
+        required: false
+        default: 30
+        type: number
 jobs:
   gradle-build-test:
     name: Gradle Build and Test 
     runs-on: ubuntu-latest
     permissions: write-all
+    timeout-minutes: ${{ inputs.timeout-minutes }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
