--- a/.github/workflows/gradle-build-test.yml
+++ b/.github/workflows/gradle-build-test.yml
@@ -34,6 +34,9 @@ jobs:
         with:
           gradle-version: wrapper
 
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+
       - name: Execute Gradle build
         run: ./gradlew clean build
 
