Update CC PR Title Check Regex

--- a/.github/workflows/cc-pr-checks.yml
+++ b/.github/workflows/cc-pr-checks.yml
@@ -9,5 +9,5 @@ jobs:
       - name: "PR Title Check"
         uses: Slashgear/action-check-pr-title@3dc601455ee2e3f5bf1e8e7cf31261ebdd4e1756
         with:
-          regexp: '^((feat|fix|chore|refactor|build|ci|test|docs|style|perf))\([A-Z]{1,4}-[0-9]{1,5}\):\h'
+          regexp: '^((feat|fix|chore|refactor|build|ci|test|docs|style|perf))\([A-Z]{1,4}-[0-9]{1,5}\):.*'
 
