main branch or bypass

--- a/.github/workflows/push-to-ecr.yml
+++ b/.github/workflows/push-to-ecr.yml
@@ -35,7 +35,7 @@ jobs:
     timeout-minutes: ${{ inputs.timeout-minutes }}
     outputs:
       image: ${{ steps.build-image.outputs.image }}
-    if: github.ref == 'refs/heads/main' && !inputs.bypass-main-branch-check
+    if: github.ref == 'refs/heads/main' || inputs.bypass-main-branch-check
     steps:
       - name: Download Build Output
         uses: actions/download-artifact@v3
