PP-16: Adding Datadog reporting action

--- a/.github/workflows/metrics-to-datadog.yml
+++ b/.github/workflows/metrics-to-datadog.yml
@@ -14,3 +14,6 @@ jobs:
           # create an API key in https://docs.datadoghq.com/account_management/api-app-keys/
           datadog-api-key: ${{ secrets.DATADOG_API_KEY }}
           datadog-site: "app.datadoghq.eu"
+          collect-job-metrics: true
+          collect-step-metrics: true
+          send-pull-request-labels: true
