PP-16: Updating permissions for DD reporter

--- a/.github/workflows/metrics-to-datadog.yml
+++ b/.github/workflows/metrics-to-datadog.yml
@@ -13,6 +13,10 @@ jobs:
   send:
     runs-on: ubuntu-latest
     timeout-minutes: 10
+    permissions:
+      actions: read
+      checks: read
+      contents: read
     steps:
       - uses: int128/datadog-actions-metrics@v1
         with:
