--- a/.github/workflows/metrics-to-datadog.yml
+++ b/.github/workflows/metrics-to-datadog.yml
@@ -1,3 +1,5 @@
+name: "Send Metrics to Datadog"
+
 on:
   workflow_run:
     workflows:
@@ -9,7 +11,6 @@ on:
       - opened
       - closed
       - edited
-      - synchronize
       - labeled
 
 jobs:
